src/test/ui/issues/issue-21974.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-21974.rs:10:4
   |
LL | trait Foo {
   | --------- required by `Foo`
...
LL | fn foo<'a,'b,T>(x: &'a T, y: &'b T)
   |    ^^^ cannot infer type for reference `&'a T`
   |
   = note: cannot resolve `&'a T: Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
